# BitwiseAddition

./: .gitignore  BitwiseAddition.cpp  CMakeLists.txt  README.md  main.cpp
myMath/: CMakeLists.txt  myMath.cpp  myMath.hpp
myMath/ut/: CMakeLists.txt  myMathTests.cpp
